wishbone: include git version information

--- a/pcie-wb/Makefile
+++ b/pcie-wb/Makefile
@@ -1,6 +1,8 @@
 ifneq ($(KERNELRELEASE),)
 # When Makefile is invoked from kernel build system, define objects
 
+ccflags-y += -DGIT_REVISION="$(shell git --git-dir=$(src)/../.git log -n1 --pretty='format:%h (%ci)')"
+
 obj-m += pcie_wb.o wishbone.o spec_wb.o
 # Only build wishbone-serial if it was missing
 ifneq ($(CONFIG_USB_SERIAL_WISHBONE),m)
