--- a/vme-wb/Kbuild
+++ b/vme-wb/Kbuild
@@ -28,7 +28,7 @@ endif
 ifeq ($(VME_SOURCE),internal)
 ifneq ($(CONFIG_VME_BUS),y)
 ifneq ($(CONFIG_VME_BUS),m)
-$(warn Kernel must have in-tree VME feature enabled)
+$(warning Kernel must have in-tree VME feature enabled)
 endif
 endif
 endif
